Use glm for matrices, and fix getting uniform location.
glm is a header only library that helps in managing matrices applied to gl. I
simlinked it into 3rd party. Also, I was trying to get the mvp uniform location
with the wrong function.

--- a/jni/src/CMakeLists.txt
+++ b/jni/src/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package (OpenGLES2 REQUIRED)
 include_directories (
     "${SDL2_INCLUDE_DIR}"
 	"${OPENGLES2_INCLUDE_DIR}"
-	#"${PROJECT_SOURCE_DIR}/src"
+	"${PROJECT_SOURCE_DIR}/3rdparty/glm"
     )
 
 set (SOURCES
